--- a/style2.css
+++ b/style2.css
@@ -16366,7 +16366,7 @@ button.gm-ui-hover-effect:focus {
 .gm-style-iw-d h5{
   font-size: 14px;
   font-family: "Nunito";
-  color: #ff5a5f;
+  color: #FFC40E;
   line-height: 1.2;
 }
 .gm-style-iw-d h4 {
