--- a/style2.css
+++ b/style2.css
@@ -1,11 +1,4 @@
 /*******
-Project/Template Name:  FindHouse - Real Estate HTML Template
-Template Url:  
-Author: CreativeLayers
-Author Url: https://themeforest.net/user/creativelayers/portfolio
-Version: 1.0
-Description: FindHouse - Real Estate HTML Template
-Tag: advanced custom search, agency, agent, business, clean, corporate, directory, google maps, homes, idx agent, listing properties, membership packages, property, real broker, real estate, real estate agent, real estate agency, realtor
 
 ********/
 /* CSS Document */
@@ -3281,14 +3274,14 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   padding: 0;
 }
 .home-seven{
-  background-image: url(../images/background/10.jpg);
+  background-image: url(images/background/10.jpg);
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
   height: 800px;
 }
 .home-nine{
-  background-image: url(../images/background/12.jpg);
+  background-image: url(images/background/12.jpg);
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
@@ -3470,7 +3463,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   top: 0;
 }
 .home1_bgi1{
-  background-image: url(../images/background/1.jpg);
+  background-image: url(./images/background/1.jpg);
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
@@ -3491,7 +3484,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   width: 100%;
 }
 .home5_bgi5{
-  background-image: url(../images/background/5.jpg);
+  background-image: url(./images/background/5.jpg);
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
@@ -3516,7 +3509,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   height: 860px;
 }
 .home6-overlay:before {
-  background-image: url(../images/background/7.jpg);
+  background-image: url(./images/background/7.jpg);
   bottom: 0;
   content: "";
   opacity: 0.7;
@@ -3541,7 +3534,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   width: 100%;
 }
 .listing-home-bg{
-  background-image: url(../images/background/13.jpg);
+  background-image: url(./images/background/13.jpg);
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
@@ -3626,7 +3619,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   line-height: 40px;
 }
 .home1-divider2 {
-  background-image: url(../images/background/3.jpg);
+  background-image: url(./images/background/3.jpg);
   -webkit-background-size: cover;
   background-position: center center;
   background-size: cover;
@@ -5975,7 +5968,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   background-color: #1d293e;
 }
 .our-testimonial:before{
-  background-image: url("../images/background/2.jpg");
+  background-image: url("./images/background/2.jpg");
   bottom: 0;
   content: "";
   left: 0;
@@ -5988,7 +5981,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   background-color: #232733;
 }
 .our-testimonial.home5:before{
-  background-image: url("../images/background/6.jpg");
+  background-image: url("./images/background/6.jpg");
   bottom: 0;
   content: "";
   left: 0;
@@ -6002,7 +5995,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   height: 365px;
 }
 .you-looking-for:before{
-  background-image: url("../images/background/8.jpg");
+  background-image: url("./images/background/8.jpg");
   bottom: 0;
   content: "";
   left: 0;
@@ -6016,7 +6009,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   height: 549px;
 }
 .modern-apertment:before{
-  background-image: url("../images/background/9.jpg");
+  background-image: url("./images/background/9.jpg");
   bottom: 0;
   content: "";
   left: 0;
@@ -6026,7 +6019,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   top: 0;
 }
 .our-hot-offer{
-  background-image: url("../images/background/11.jpg");
+  background-image: url("./images/background/11.jpg");
   height: 581px;
 }
 .our-hot-offer:before{
@@ -7016,7 +7009,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
   background-color: transparent;
 }
 .footer_one.home8:before{
-  background-image: url(../images/background/3.html);
+  background-image: url(./images/background/3.html);
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
@@ -7336,7 +7329,7 @@ form.home5_advanced_search_form .form-group input.form-control::-ms-input-placeh
 }
 /*== Inner Pages Breadcrumb ==*/
 .inner_page_breadcrumb {
-  background-image: url(../images/background/inner-pagebg.jpg);
+  background-image: url(./images/background/inner-pagebg.jpg);
   background-repeat: no-repeat;
   height: 410px;
   position: relative;
@@ -12445,7 +12438,7 @@ a.btn.btn_error{
   width: 100%;
   overflow: hidden;
   cursor: pointer;
-  background-image: url(../images/team/upload_photo.jpg);
+  background-image: url(./images/team/upload_photo.jpg);
   border-radius: 5px;
   -webkit-transition: -webkit-transform 0.4s;
   transition: -webkit-transform 0.4s;
@@ -14493,11 +14486,11 @@ a.btn.btn_error{
 }
 /*== BackGround Images ==*/
 .bg-img2 {
-  background-image: url("../images/background/2.jpg");
+  background-image: url("./images/background/2.jpg");
 }
 .bg-img3 {
   background-attachment: scroll;
-  background-image: url("../images/background/3.jpg");
+  background-image: url("./images/background/3.jpg");
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 8px;
@@ -14505,7 +14498,7 @@ a.btn.btn_error{
 }
 .bg-img4 {
   background-attachment: scroll;
-  background-image: url("../images/background/4.jpg");
+  background-image: url("./images/background/4.jpg");
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 8px;
@@ -14513,21 +14506,21 @@ a.btn.btn_error{
 }
 .bg-img5 {
   background-attachment: scroll;
-  background-image: url("../images/background/5.jpg");
+  background-image: url("./images/background/5.jpg");
   background-position: center;
   background-repeat: no-repeat;
   height: 650px;
 }
 .bg-img6 {
   background-attachment: scroll;
-  background-image: url("../images/background/8.jpg");
+  background-image: url("./images/background/8.jpg");
   background-position: center;
   background-repeat: no-repeat;
   height: 960px;
 }
 .bg-ptrn1 {
   background-attachment: scroll;
-  background-image: url("../images/pattern/1.png");
+  background-image: url("./images/pattern/1.png");
   background-position: center;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
@@ -14535,7 +14528,7 @@ a.btn.btn_error{
 }
 .bg-ptrn2 {
   background-attachment: scroll;
-  background-image: url("../images/pattern/2.png");
+  background-image: url("./images/pattern/2.png");
   background-position: center;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
@@ -14575,7 +14568,7 @@ section {
 }
 .preloader {
   background-color: #ffffff;
-  background-image: url("../images/preloader.gif");
+  background-image: url("./images/preloader.gif");
   background-position: center center;
   background-repeat: no-repeat;
   height: 100%;
@@ -14913,7 +14906,7 @@ a.scrollToHome.home8{
   background-color: rgb(29, 41, 62);
 }
 .divider_home1:before{
-  background-image: url("../images/background/2.jpg");
+  background-image: url("./images/background/2.jpg");
   content: "";
   height: 100%;
   left: 0;
@@ -14964,7 +14957,7 @@ a.scrollToHome.home8{
   padding-top: 135px;
 }
 .divider2:before{
-  background-image: url(../images/background/2.html);
+  background-image: url(./images/background/2.html);
   background-repeat: no-repeat;
   bottom: 0;
   content: "";
@@ -15914,17 +15907,17 @@ canvas {
   width: 90px;
 }
 .single_product_slider.owl-theme .owl-dots .owl-dot:first-child span{
-  background-image: url(../images/shop/ss1.png);
+  background-image: url(./images/shop/ss1.png);
   background-position: center center;
   background-size: cover;
 }
 .single_product_slider.owl-theme .owl-dots .owl-dot:nth-child(2) span{
-  background-image: url(../images/shop/ss2.png);
+  background-image: url(./images/shop/ss2.png);
   background-position: center center;
   background-size: cover;
 }
 .single_product_slider.owl-theme .owl-dots .owl-dot:nth-child(3) span{
-  background-image: url(../images/shop/ss3.png);
+  background-image: url(./images/shop/ss3.png);
   background-position: center center;
   background-size: cover;
 }
